--- a/rt_springboot_mybatis/rest_ful_user/src/main/resources/application.properties
+++ b/rt_springboot_mybatis/rest_ful_user/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=dev
+
 server.port=8090
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/liu_db?useSSL=true&serverTimezone=UTC&characterEncoding=UTF-8
@@ -11,3 +13,10 @@ spring.devtools.livereload.enabled=true
 spring.devtools.remote.restart.enabled=true
 spring.devtools.restart.poll-interval=3000ms
 spring.devtools.restart.quiet-period=2999ms
+
+# 文件上传相关配置
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=1024MB
+
+# 用户上传头像的保存位置
+userphoto.path=static/userphoto
