--- a/rt_springboot_mybatis/rest_ful_user/src/main/resources/application.properties
+++ b/rt_springboot_mybatis/rest_ful_user/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=dev
+# 测试多配置文件   要注释掉server.port=8090
+#spring.profiles.active=dev
 
 server.port=8090
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
