--- a/rt_springboot_mybatis/rest_ful_user/pom.xml
+++ b/rt_springboot_mybatis/rest_ful_user/pom.xml
@@ -58,6 +58,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+<!--        引入模板页-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
