--- a/rt_springboot_mybatis/spring_cloud/集群_spring_cloud/demo-cloud/eureka-consumer-feign/src/main/resources/application.properties
+++ b/rt_springboot_mybatis/spring_cloud/集群_spring_cloud/demo-cloud/eureka-consumer-feign/src/main/resources/application.properties
@@ -22,12 +22,15 @@ eureka.client.service-url.defaultZone=http://server1:7000/eureka,http://server2:
 ribbon.ReadTimeout=5000
 ribbon.ConnectTimeout=500
 
+# 新增 Feign开启熔断器功能
+feign.hystrix.enabled=true
+
 # 日志处理
 #   FULL	请求响应的head/hody/元数据
 #   NONE	没有日志（默认）
 #   BASIC	请求和响应的状态码，时间
 #   HEADERS基于Basic加上请求和响应头
 feign.client.config.default.loggerLevel=FULL
-logging.level.包名=Debug
+#logging.level.包名=Debug
 
 
