--- a/rt_springboot_mybatis/spring_cloud/集群_spring_cloud/demo-cloud/eureka-consumer-feign/pom.xml
+++ b/rt_springboot_mybatis/spring_cloud/集群_spring_cloud/demo-cloud/eureka-consumer-feign/pom.xml
@@ -33,6 +33,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+<!--        熔断-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
